--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,23 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Luis",
+            "program": "${workspaceFolder}/javascript.js",
+            
+            "outFiles": [
+                "${workspaceRoot}/{lib,node_modules}/**/*.js",
+                "!${workspaceRoot}/lib/tests/**/*.js"
+            ]
+        },
         {
             "type": "chrome",
             "request": "launch",
-             "name": "Chrome", 
+            "name": "Chrome",
             "url": "http://localhost:5500",
             "webRoot": "${workspaceFolder}\\adopt-animals-app"
         }
-     
     ]
 }
